# saturable-oscillator-periodic-responses

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
outputs/tables/: asymptotic_errors.csv  branch_continuation.csv  mesh_intervals.csv  mesh_refinement.csv  representative_floquet.csv  symmetry_diagnostics.csv
paper/: generated_tables.tex  numerical_section.tex
scripts/: reproduce_paper.py
src/saturable_oscillator/: __init__.py  asymptotics.py  finite_difference.py  model.py  shooting.py
tests/: test_core.py
